# sentinel

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  model_governance.yml
frontend/: package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/models/: page.tsx
frontend/src/app/models/[id]/: page.tsx
frontend/src/app/red-team/: page.tsx
frontend/src/components/: AlertBadge.tsx  AuditTimeline.tsx  FairnessChart.tsx  GateStatus.tsx  ModelCard.tsx
frontend/src/lib/: api.ts
infra/grafana/dashboards/: sentinel.json
infra/grafana/datasources/: datasource.yml
infra/helm/sentinel/: Chart.yaml  values.yaml
infra/helm/sentinel/templates/: cronjobs.yaml  deployment.yaml  service.yaml
infra/mysql/: init.sql
infra/prometheus/: prometheus.yml
scripts/: build_rag_index.py  generate_mock_predictions.py  seed_demo_models.py  verify_audit_chain.py
sentinel/: __init__.py  config.py  mock_llm.py
sentinel/agents/: auditor.py  crew.py  documenter.py  explainer.py  red_team.py
sentinel/agents/agent_cards/: auditor.json  documenter.json  explainer.json  red_team.json
sentinel/api/: dependencies.py  main.py  schemas.py
sentinel/api/routes/: agent_cards.py  alerts.py  audit.py  models.py  red_team.py
sentinel/audit/: drift.py  explainability.py  fairness.py  red_team_attacks.py
sentinel/compliance/: gates.py  model_card.py  sr11_7.py
sentinel/data/: audit_log.py  database.py  feature_store.py  models.py
sentinel/data/repositories/: alerts.py  fairness.py  model_cards.py  predictions.py  red_team.py
sentinel/notifications/: slack.py
sentinel/observability/: metrics.py  tracing.py
sentinel/rag/: index_builder.py  query_engine.py
sentinel/rag/documents/: eu_ai_act_articles.txt  fcra.txt  nist_ai_rmf.txt  regulation_b.txt  sr_11_7.txt
sentinel/registry/: mlflow_client.py
tests/integration/: test_api.py  test_crew.py
tests/unit/: test_audit_log.py  test_explainability.py  test_fairness.py  test_gates.py  test_red_team.py
