[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel"
version = "0.1.0"
description = "Continuous AI audit and red-teaming platform for financial advisory services"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncmy>=0.2.9",
    "alembic>=1.13.0",

    # Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",

    # Redis
    "redis>=5.0.0",

    # CrewAI
    "crewai>=0.55.0",
    "crewai-tools>=0.8.0",

    # LlamaIndex
    "llama-index>=0.10.0",
    "llama-index-embeddings-huggingface>=0.2.0",
    "llama-index-embeddings-openai>=0.1.0",
    "llama-index-vector-stores-simple>=0.1.0",

    # Anthropic
    "anthropic>=0.28.0",

    # ML / Fairness
    "scikit-learn>=1.4.0",
    "fairlearn>=0.10.0",
    "shap>=0.45.0",
    "xgboost>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "sentence-transformers>=2.7.0",

    # MLflow
    "mlflow>=2.13.0",
    "boto3>=1.34.0",

    # Observability
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-instrumentation-redis>=0.45b0",
    "prometheus-client>=0.20.0",

    # Notifications
    "httpx>=0.27.0",
    "slack-sdk>=3.27.0",

    # Utilities
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "uuid7>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "faker>=25.0.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
